--- a/events.html
+++ b/events.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fit Check - GAZILLION GOALS</title>
+  <title>Events - GAZILLION GOALS</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Orbitron:wght@400;700;900&family=Teko:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -32,6 +32,7 @@
       position: relative;
     }
 
+    /* Animated grid background */
     .grid-bg {
       position: fixed;
       top: 0;
@@ -52,34 +53,7 @@
       100% { transform: translate(50px, 50px); }
     }
 
-    .neon-ball {
-      position: fixed;
-      font-size: 60px;
-      animation: floatCrazy 8s ease-in-out infinite;
-      z-index: 1;
-      filter: drop-shadow(0 0 20px #4ade80) drop-shadow(0 0 40px #22c55e);
-      pointer-events: none;
-    }
-
-    @keyframes floatCrazy {
-      0%, 100% { 
-        transform: translate(0, 0) rotate(0deg) scale(1);
-        opacity: 0.3;
-      }
-      25% { 
-        transform: translate(100px, -80px) rotate(90deg) scale(1.5);
-        opacity: 0.7;
-      }
-      50% { 
-        transform: translate(-50px, -150px) rotate(180deg) scale(0.8);
-        opacity: 0.4;
-      }
-      75% { 
-        transform: translate(-120px, -60px) rotate(270deg) scale(1.3);
-        opacity: 0.6;
-      }
-    }
-
+    /* Navigation */
     .nav-tabs {
       display: flex;
       justify-content: space-between;
@@ -186,73 +160,71 @@
       letter-spacing: 3px;
     }
 
-    .hero-section {
+    /* Main Content */
+    .main-content {
       position: relative;
       z-index: 2;
-      min-height: 40vh;
+      min-height: 100vh;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      padding: 120px 20px 40px;
-      text-align: center;
+      padding: 120px 20px 60px;
     }
 
-    .hero-title {
+    /* Page Title */
+    .page-title {
       font-family: 'Bebas Neue', cursive;
       font-size: 7rem;
       font-weight: 900;
-      margin-bottom: 20px;
-      background: linear-gradient(45deg, #4ade80, #fff, #22c55e, #86efac, #4ade80);
-      background-size: 400% 400%;
+      margin-bottom: 40px;
+      background: linear-gradient(45deg, #4ade80, #fff, #22c55e, #86efac);
+      background-size: 300% 300%;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      animation: moveBackground 3s ease infinite, glitchTitle 5s ease-in-out infinite;
+      animation: moveBackground 3s ease infinite;
+      text-shadow: 0 0 80px rgba(74, 222, 128, 0.8);
       letter-spacing: 12px;
+      text-align: center;
       filter: drop-shadow(0 10px 40px rgba(74, 222, 128, 0.6));
     }
 
-    @keyframes glitchTitle {
-      0%, 90%, 100% { transform: translateY(0); }
-      92% { transform: translateY(-10px) translateX(-5px); }
-      94% { transform: translateY(5px) translateX(5px); }
-      96% { transform: translateY(0); }
-    }
-
-    .hero-subtitle {
-      font-family: 'Teko', sans-serif;
-      font-size: 2rem;
-      color: #4ade80;
-      letter-spacing: 4px;
-      text-transform: uppercase;
-      animation: pulseGlow 2s ease-in-out infinite;
-    }
-
-    @keyframes pulseGlow {
-      0%, 100% { text-shadow: 0 0 30px rgba(74, 222, 128, 0.8); }
-      50% { text-shadow: 0 0 50px rgba(74, 222, 128, 1); }
-    }
-
-    .content-wrapper {
-      position: relative;
-      z-index: 2;
+    /* Coming Soon Container */
+    .coming-soon-wrapper {
+      width: 100%;
       max-width: 1200px;
-      margin: 0 auto;
-      padding: 40px 20px 100px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 60px;
+      perspective: 1000px;
     }
 
-    .player-box {
+    /* Main Coming Soon Box */
+    .coming-soon-box {
       background: linear-gradient(135deg, rgba(0, 0, 0, 0.95), rgba(15, 50, 15, 0.9));
-      padding: 50px 40px;
-      margin-bottom: 60px;
+      padding: 80px 60px;
       border: 4px solid #4ade80;
       position: relative;
       overflow: hidden;
-      clip-path: polygon(0 0, 100% 0, 100% calc(100% - 50px), calc(100% - 50px) 100%, 0 100%);
-      transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+      clip-path: polygon(0 0, 100% 0, 100% calc(100% - 40px), calc(100% - 40px) 100%, 0 100%);
+      animation: pulseBox 3s ease-in-out infinite;
+      transform-style: preserve-3d;
+      width: 100%;
     }
 
-    .player-box::before {
+    @keyframes pulseBox {
+      0%, 100% {
+        box-shadow: 0 20px 60px rgba(74, 222, 128, 0.4),
+                    0 0 80px rgba(74, 222, 128, 0.3);
+      }
+      50% {
+        box-shadow: 0 30px 80px rgba(74, 222, 128, 0.6),
+                    0 0 120px rgba(74, 222, 128, 0.5);
+      }
+    }
+
+    .coming-soon-box::before {
       content: '';
       position: absolute;
       top: -50%;
@@ -269,12 +241,12 @@
       to { transform: rotate(360deg); }
     }
 
-    .player-box::after {
-      content: '👔';
+    .coming-soon-box::after {
+      content: '⚽';
       position: absolute;
-      font-size: 300px;
+      font-size: 350px;
       opacity: 0.03;
-      right: -60px;
+      right: -80px;
       bottom: -80px;
       animation: rotateSlow 20s linear infinite;
     }
@@ -284,61 +256,121 @@
       to { transform: rotate(360deg); }
     }
 
-    .player-box:hover {
-      transform: translateY(-15px) scale(1.02);
-      box-shadow: 0 30px 80px rgba(74, 222, 128, 0.6),
-                  0 0 100px rgba(74, 222, 128, 0.4);
-      border-color: #22c55e;
-    }
-
-    .player-box h2 {
-      font-family: 'Bebas Neue', cursive;
-      font-size: 3.5rem;
-      color: #4ade80;
-      margin-bottom: 15px;
-      letter-spacing: 6px;
-      text-shadow: 0 0 30px rgba(74, 222, 128, 0.8);
+    /* Icon Container */
+    .icon-container {
       position: relative;
+      margin: 0 auto 50px;
+      width: 200px;
+      height: 200px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .icon-ring {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      border: 4px solid rgba(74, 222, 128, 0.3);
+      border-radius: 50%;
+      animation: rotateRing 8s linear infinite;
+    }
+
+    @keyframes rotateRing {
+      from { transform: rotate(0deg); }
+      to { transform: rotate(360deg); }
+    }
+
+    .main-icon {
+      font-size: 120px;
+      color: #4ade80;
       z-index: 1;
-      animation: flicker 3s ease-in-out infinite;
+      animation: iconPulse 2s ease-in-out infinite;
+      filter: drop-shadow(0 0 30px #4ade80);
     }
 
-    @keyframes flicker {
-      0%, 100% { opacity: 1; text-shadow: 0 0 30px rgba(74, 222, 128, 0.8); }
-      50% { opacity: 0.95; text-shadow: 0 0 50px rgba(74, 222, 128, 1); }
+    @keyframes iconPulse {
+      0%, 100% {
+        transform: scale(1);
+        filter: drop-shadow(0 0 30px #4ade80);
+      }
+      50% {
+        transform: scale(1.2);
+        filter: drop-shadow(0 0 50px #22c55e);
+      }
     }
 
-    .player-box h2::before {
+    .coming-soon-title {
+      font-family: 'Bebas Neue', cursive;
+      font-size: 5rem;
+      margin-bottom: 30px;
+      color: #4ade80;
+      position: relative;
+      display: inline-block;
+      letter-spacing: 8px;
+      text-align: center;
+      width: 100%;
+      text-shadow: 0 0 40px rgba(74, 222, 128, 0.8);
+      animation: glitchText 4s ease-in-out infinite;
+    }
+
+    @keyframes glitchText {
+      0%, 90%, 100% { transform: translateX(0); }
+      92% { transform: translateX(-5px); }
+      94% { transform: translateX(5px); }
+      96% { transform: translateX(-3px); }
+      98% { transform: translateX(3px); }
+    }
+
+    .coming-soon-title::before {
       content: '//';
       position: absolute;
-      left: -50px;
+      left: -60px;
       color: #22c55e;
       opacity: 0.6;
     }
 
-    .text-content {
+    .event-info {
       position: relative;
       z-index: 1;
-      margin-bottom: 30px;
+      text-align: center;
     }
 
-    .text-content p {
-      font-family: 'Orbitron', sans-serif;
-      font-size: 1.2rem;
-      line-height: 1.9;
+    .event-name {
+      font-family: 'Teko', sans-serif;
+      font-size: 3rem;
+      color: #86efac;
+      margin-bottom: 20px;
+      font-weight: 700;
+      letter-spacing: 4px;
+      text-transform: uppercase;
+      animation: pulseGlow 2s ease-in-out infinite;
+    }
+
+    @keyframes pulseGlow {
+      0%, 100% {
+        text-shadow: 0 0 20px rgba(74, 222, 128, 0.6);
+      }
+      50% {
+        text-shadow: 0 0 40px rgba(74, 222, 128, 1);
+      }
+    }
+
+    .event-description {
+      font-size: 1.4rem;
+      line-height: 2;
       color: #e8f5e9;
-      margin-bottom: 15px;
-      padding-left: 30px;
-      position: relative;
+      margin-bottom: 25px;
+      font-family: 'Orbitron', sans-serif;
+      font-weight: 400;
     }
 
-    .text-content p::before {
+    .event-description::before {
       content: '>';
-      position: absolute;
-      left: 0;
+      margin-right: 10px;
       color: #4ade80;
       font-weight: bold;
-      font-size: 1.4rem;
+      font-size: 1.6rem;
       animation: blink 1.5s ease-in-out infinite;
     }
 
@@ -347,66 +379,25 @@
       25%, 75% { opacity: 0; }
     }
 
-    .text-content p strong {
+    .subtitle {
+      font-size: 1.3rem;
       color: #4ade80;
-      text-transform: uppercase;
-      letter-spacing: 1px;
+      font-style: italic;
+      margin-top: 40px;
+      padding: 20px;
+      border-left: 5px solid #4ade80;
+      background: linear-gradient(90deg, rgba(74, 222, 128, 0.2), transparent);
+      clip-path: polygon(0 0, calc(100% - 20px) 0, 100% 20px, 100% 100%, 0 100%);
+      font-family: 'Orbitron', sans-serif;
     }
 
-   .main-photo {
-      width: 100%;
-      max-width: 500px;
-      height: auto;
-      object-fit: contain;
-      border: 4px solid #4ade80;
-      clip-path: polygon(8% 0, 100% 0, 100% 92%, 92% 100%, 0 100%, 0 8%);
-      margin: 30px auto;
-      display: block;
-      position: relative;
-      z-index: 1;
-      transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-      box-shadow: 0 15px 50px rgba(74, 222, 128, 0.4);
-    }
-
-    .main-photo:hover {
-      transform: scale(1.05) rotate(2deg);
-      box-shadow: 0 25px 70px rgba(74, 222, 128, 0.6);
-      border-color: #22c55e;
-    }
-
-    .outfit-gallery {
-      display: flex;
-      gap: 20px;
-      justify-content: center;
-      flex-wrap: wrap;
-      margin-top: 30px;
-      position: relative;
-      z-index: 1;
-    }
-
-    .outfit-gallery img {
-      width: 280px;
-      height: auto;
-      object-fit: contain;
-      border: 4px solid #4ade80;
-      clip-path: polygon(8% 0, 100% 0, 100% 92%, 92% 100%, 0 100%, 0 8%);
-      transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-      cursor: pointer;
-      box-shadow: 0 10px 40px rgba(74, 222, 128, 0.3);
-    }
-
-    .outfit-gallery img:hover {
-      transform: scale(1.08) rotate(3deg);
-      box-shadow: 0 20px 60px rgba(74, 222, 128, 0.6);
-      border-color: #22c55e;
-    }
-
+    /* Footer */
     footer {
       background: rgba(0, 0, 0, 0.95);
       color: white;
       text-align: center;
       padding: 50px 20px;
-      margin-top: 80px;
+      margin-top: 100px;
       border-top: 4px solid #4ade80;
       position: relative;
       z-index: 2;
@@ -438,6 +429,7 @@
       transform: scale(1.5) rotate(360deg);
     }
 
+    /* Mobile */
     @media (max-width: 768px) {
       .hamburger { display: flex; }
 
@@ -463,43 +455,71 @@
         text-align: center;
       }
 
-      .hero-title {
+      .page-title {
         font-size: 4rem;
         letter-spacing: 5px;
+        margin-bottom: 30px;
       }
 
-      .hero-subtitle {
-        font-size: 1.5rem;
+      .coming-soon-box {
+        padding: 60px 30px;
+        clip-path: polygon(0 0, 100% 0, 100% calc(100% - 30px), calc(100% - 30px) 100%, 0 100%);
+      }
+
+      .coming-soon-title {
+        font-size: 3.5rem;
+        letter-spacing: 4px;
+      }
+
+      .coming-soon-title::before {
+        left: -40px;
+      }
+
+      .icon-container {
+        width: 150px;
+        height: 150px;
+        margin-bottom: 40px;
+      }
+
+      .main-icon {
+        font-size: 90px;
+      }
+
+      .event-name {
+        font-size: 2.2rem;
         letter-spacing: 2px;
       }
 
-      .player-box {
-        padding: 40px 25px;
-        clip-path: polygon(0 0, 100% 0, 100% calc(100% - 35px), calc(100% - 35px) 100%, 0 100%);
+      .event-description {
+        font-size: 1.2rem;
       }
 
-      .player-box h2 {
-        font-size: 2.5rem;
+      .subtitle {
+        font-size: 1.1rem;
+        padding: 15px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .page-title {
+        font-size: 3rem;
         letter-spacing: 3px;
       }
 
-      .player-box h2::before {
-        left: -35px;
+      .coming-soon-box {
+        padding: 40px 20px;
       }
 
-      .text-content p {
+      .coming-soon-title {
+        font-size: 2.8rem;
+      }
+
+      .event-name {
+        font-size: 1.8rem;
+      }
+
+      .event-description {
         font-size: 1.1rem;
-        padding-left: 25px;
-      }
-
-      .main-photo {
-        max-width: 100%;
-        height: auto;
-      }
-
-      .outfit-gallery img {
-        width: 220px;
-        height: 280px;
       }
     }
 
@@ -510,10 +530,7 @@
 
   <div class="grid-bg"></div>
 
-  <div class="neon-ball" style="top: 10%; left: 10%; animation-delay: 0s;">⚽</div>
-  <div class="neon-ball" style="top: 60%; right: 15%; animation-delay: 2s;">⚽</div>
-  <div class="neon-ball" style="bottom: 20%; left: 20%; animation-delay: 4s;">⚽</div>
-
+  <!-- Navigation -->
   <div class="nav-tabs">
     <div class="hamburger" onclick="toggleMenu()">
       <span></span>
@@ -531,57 +548,31 @@
     <span class="site-name">GAZILLION GOALS</span>
   </div>
 
-  <div class="hero-section">
-    <h1 class="hero-title">FIT CHECK</h1>
-    <p class="hero-subtitle">LATEST PLAYER FITS</p>
+  <!-- Main Content -->
+  <div class="main-content">
+    <h1 class="page-title">UPCOMING EVENTS</h1>
+
+    <div class="coming-soon-wrapper">
+      <div class="coming-soon-box">
+        <div class="icon-container">
+          <div class="icon-ring"></div>
+          <i class="fas fa-calendar-alt main-icon"></i>
+        </div>
+
+        <h2 class="coming-soon-title">COMING SOON</h2>
+
+        <div class="event-info">
+          <div class="event-name">AFCON</div>
+          
+          <div class="subtitle">
+            ⚡ CHECK BACK SOON FOR MORE UPDATES ⚡
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
-  <div class="content-wrapper">
-
-    <!-- Player 1: Khuliso Mudau -->
-    <div class="player-box">
-      <h2>KHULISO MUDAU</h2>
-      <div class="text-content">
-        <p>Right back for Mamelodi Sundowns: Formal wear is on another level</p>
-        <p><strong>Style:</strong> Fitting to the body</p>
-      </div>
-      <img src="images/him1.jpg" alt="Khuliso Mudau" class="main-photo">
-      <div class="outfit-gallery">
-        <img src="images/kk2.PNG" alt="Khuliso Look 1">
-        <img src="images/kk3.PNG" alt="Khuliso Look 2">
-      </div>
-    </div>
-
-    <!-- Player 2: Mike Maignan -->
-    <div class="player-box">
-      <h2>MIKE MAIGNAN</h2>
-      <div class="text-content">
-        <p>Goalkeeper for AC Milan: Makes iconic fashion statements on and off the pitch</p>
-        <p><strong>Style:</strong> 90's Hip Hop with modern hues/Track Suits</p>
-      </div>
-      <img src="images/newmike.jpg" alt="Mike Maignan" class="main-photo">
-      <div class="outfit-gallery">
-        <img src="images/MM4.PNG" alt="Mike Look 1">
-        <img src="images/mmm2.PNG" alt="Mike Look 2">
-      </div>
-    </div>
-
-    <!-- Player 3: Sergio Ramos -->
-    <div class="player-box">
-      <h2>SERGIO RAMOS</h2>
-      <div class="text-content">
-        <p>Centre Back for CF Monterrey: Keeps it trendy with a personal twist. Cares about details from hair to fits to tats.</p>
-        <p><strong>Style:</strong> Trendsetter, personalizes trends</p>
-      </div>
-      <img src="images/ramosmainfinal.jpg" alt="Sergio Ramos" class="main-photo">
-      <div class="outfit-gallery">
-        <img src="images/ramos2.jpg" alt="Ramos Look 1">
-        <img src="images/ramos3.jpg" alt="Ramos Look 2">
-      </div>
-    </div>
-
-  </div>
-
+  <!-- Footer -->
   <footer>
     &copy; 2025 GAZILLION GOALS. ALL RIGHTS RESERVED.<br>
     DESIGNED BY P N. | FOLLOW US ON TIKTOK
